--- a/src/app/main/pages/reservation/component/card-reservation.component.html
+++ b/src/app/main/pages/reservation/component/card-reservation.component.html
@@ -10,7 +10,7 @@
                         <div class="d-flex align-items-center mb-2">
                             <mat-icon class="icon-calendar-2" svgIcon="user"></mat-icon>
                             <p class="mb-0 mr-1 key-name">Nama Pemesan : </p>
-                            <p class="mb-0 fw-bold value-in">-</p>
+                            <p class="mb-0 fw-bold value-in">{{ item?.name?? '-' }}</p>
                         </div>
                         <div class="d-flex align-items-center mb-2">
                             <mat-icon class="icon-calendar-2" svgIcon="date"></mat-icon>
