--- a/src/app/main/pages/settings/setting.component.html
+++ b/src/app/main/pages/settings/setting.component.html
@@ -211,6 +211,7 @@
                             <button
                                 (click)="settingRepo.upsert_setting.id == null ? settingRepo.save(true) : settingRepo.save(false)"
                                 class="col btn-save" mat-button>Simpan</button>
+                            <button (click)="print()" class="col btn-test" mat-button>Print Test</button>
                         </div>
 
                     </div>
